--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="border-bottom">
   <a routerLink="/"><img src="../../../assets/icons/logo2x.png" id="logo"/></a>
 </header>
 
