--- a/src/app/modules/results/result-item/result-item.component.html
+++ b/src/app/modules/results/result-item/result-item.component.html
@@ -1,4 +1,4 @@
-<div class="resultItemHoverable" style="border: solid 1px #d1d1d1;" (click)="onResultItemClick()">
+<div class="resultItemHoverable" (click)="onResultItemClick()">
   <div class="res-item-header row">
     <img src="../../../assets/imgs/dentist-female.png" class="imgDentist"/>
     <div class="headerDetails">
