--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,13 @@
 
 #logo{
-  height: 30px;
+  width: 201px;
+  height: 41px;
   display: inline-block;
   /*float: left;*/
   margin-left: 90px;
   margin-top: 10px;
   margin-bottom: 10px;
   cursor: pointer;
+  object-fit: contain;
+
 }
