--- a/src/app/modules/details/detailsview/detailsview.component.html
+++ b/src/app/modules/details/detailsview/detailsview.component.html
@@ -55,8 +55,7 @@
 
       <div
         class="col-md-8 table row"
-        style="border-collapse: separate; border-spacing: 1em; padding-left: 50px; padding-top: 14px;"
-      >
+        style="border-collapse: separate; border-spacing: 1em; padding-left: 50px; padding-top: 14px;" >
         <div class="d-sm-table-row schedule">
           <p class="d-sm-table-cell border-right" style="padding-right: 10pt">
             MON <br />8:00 AM - 3:30 PM
@@ -80,7 +79,7 @@
         </div>
       </div>
     </div>
-    <div class="container" style="margin-left: 40px; padding: 33px;">
+    <div class="container" style="margin-left: 30px; padding: 33px;">
       <div class="row">
         <div class="col-sm border" style="margin-right: 34px;">
           <div class="categoryName">CATEGORY NAME</div>
