Custom scrollbar style added

--- a/src/app/modules/results/results-main/results-main.component.html
+++ b/src/app/modules/results/results-main/results-main.component.html
@@ -141,6 +141,8 @@
     <app-result-item></app-result-item>
     <app-result-item></app-result-item>
     <app-result-item></app-result-item>
+    <app-result-item></app-result-item>
+    <app-result-item></app-result-item>
   </section>
 
 
