--- a/src/app/modules/results/results-main/results-main.component.css
+++ b/src/app/modules/results/results-main/results-main.component.css
@@ -56,6 +56,8 @@ section {
 /**************************START RESULTS SECTION*******************/
 #resultsContainer {
   border-right: 1pt solid #e6e6e6;
+
+  overflow-y: scroll;
 }
 
 /**************************END RESULTS SECTION*******************/
