--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -1,11 +1,12 @@
-<div>
+<div class="maindiv">
   <!--    ==============Plan  Selection==================================-->
+<!--  <div #mapContainer id="map"></div>-->
+
   <div class="Captura-de-Pantalla-2020-03-25-a-las-155236">
     <!--    <label class="choose-plan"> Plans </label> <border-radius>-->
     <div class="Rectangle-3-Copy-3">
 
-
-      <select id="plan" [(ngModel)]="Choose_Dental_Plan" #plan class="DENTAL-PLAN-Select"
+      <select id="plan" [(ngModel)]="this.parameter_list.plans" #plan class="DENTAL-PLAN-Select"
               (change)="onPlanChange(plan.value)">
         <option class="DENTAL-PLAN" value="Dental Plan" selected> Choose Dental Plan</option>
         <option class="DENTAL-PLAN" value="National Options PPO 20">National Options PPO 20</option>
@@ -17,7 +18,6 @@
       <!--      <mat-card class="example-result-card">-->
       <div class="Rectangle-739-Copy">
         <mat-slider
-          class="mat-slider.mat-slider-horizontal .mat-slider-track-fill"
           [max]="max"
           [min]="min"
           [step]="step"
@@ -32,24 +32,20 @@
       <!--      <input class="YOUR-location" id="distance" name="distance" placeholder="distance">-->
 
       <!--===============================================-->
-      <button class="SEARCH" (click)="filterByPlan_And_Location_Distance()"> Search</button>
-
-    </div>
-
-
-    <!--  ====================Advanced search Button=======-->
-    <div>
-      <button class="Advanced-search" (click)="advancedSearch()"> Advanced search</button>
-      <img src="../../../assets/icons/page-1-copy.png" height="7" width="12"/>
+      <button class="AdvancedSEARCH_div" (click)="filterByPlan_And_Location_Distance()"> Search</button>
+      <!--  ====================Advanced search Button=======-->
+      <div >
+        <button class="Advanced-search" (click)="advancedSearch()"> Advanced search</button>
+        <img src="../../../assets/icons/page-1-copy.png" height="7" width="12"/>
+      </div>
 
     </div>
 
     <!--    /////////              Availability        ////-->
 
-    <div [hidden]="!isAdvancedSearchButtonCliked">
+    <div class="zIndex" [hidden]="!isAdvancedSearchButtonCliked">
       <hr class="horizontal-line">
-
-      <div style="display: inline-block">
+      <div class="avaialbility_div">
         <label class="availability"> AVAILABILITY</label>
         <br>
         <label class="Accepting-new-patien"> Accessing new Patients</label>
@@ -64,27 +60,34 @@
 
       </div>
 
-      <div class="Specialization_div" style="display: inline-block">
+      <div class="Specialization_div " style="display: inline-block">
         <label class="Specialization"> SPECIALIZATION</label>
-        <div>
-          <input class="Oral-Surgeon" type="checkbox" #inputE2 id="oralSurgeon" [(ngModel)]="oralSureon"
-                 (change)="isOralSurgeon(inputE2.checked)">
-          <label>Oral Surgeon </label>
-          <br>
-          <input class="Endodontist" type="checkbox" id="endodontist" #inputElement3 [(ngModel)]="endodontist"
-                 (change)="isEndodontist(inputElement3.checked)">
-          <label>Endodontist</label>
-          <br>
-          <input class="Lorem-Ipsum" type="checkbox" id="LoremIpsum ">
-          <label>Lorem-Ipsum </label>
+        <div >
+          <div style="display:inline-block">
+            <input  type="checkbox" #inputE2 id="oralSurgeon" [(ngModel)]="oralSureon"
+                    (change)="isOralSurgeon(inputE2.checked)">
+            <label  class="Oral-Surgeon"> Surgeon </label>
+            <br>
+            <input type="checkbox" id="endodontist" #inputElement3 [(ngModel)]="endodontist"
+                   (change)="isEndodontist(inputElement3.checked)">
+            <label class="Endodontist">Endodontist</label>
+          </div>
+
+          <div style="display: inline-block">
+            <input  type="checkbox" id="LoremIpsum2">
+            <label class="Lorem-Ipsum">Lorem-Ipsum </label>
+            <br>
+            <input  type="checkbox" id="LoremIpsum1 ">
+            <label class="Lorem-Ipsum">Lorem-Ipsum I </label>
+          </div>
 
         </div>
 
       </div>
 
       <!--    ================= Times Attributies         ==================-->
-      <div style="display: inline-block">
-        <div style="display: inline-block">
+      <div >
+        <div class="AccessebilityTimeframe">
           <hr class="horizontal-line">
           <label class="Extended-Hours"> EXTENDED HOURS</label>
           <br>
@@ -93,27 +96,27 @@
                  (change)="isThereExtendedhourse_saturday(inputElement4.checked)" name="extendedhourse_saturday"
                  data-toggle="toggle">
           <br>
-
           <label class="Weekday"> Weekday</label>
           <input type="checkbox" id="extendedhourse_weekday" #inputElement6 [(ngModel)]="weekday"
                  (change)="isWeekdayWorking(inputElement6.checked)" name="extendedhourse_weekday" data-toggle="toggle">
 
         </div>
 
-        <!--      ===============    Accessibility==============-->
-
-        <div style="display: inline-block" class="accessibility_div">
+<!--              ===============    Accessibility==============-->
+        <div class="accessibility_div">
           <label class="accessibility"> ACCESSIBILITY </label>
           <br>
           <label class="Handicap-Accessible"> Handicap Accessible</label>
           <!--          <input type="checkbox" id="handicapAccecebility" name="handicapAccecebility" data-toggle="toggle"toggle>-->
           <input type="checkbox" #inputElement7 [(ngModel)]="handicapAccecebility"
                  (change)="ishandicapAccecebility(inputElement7.checked)" data-toggle="toggle">
+                  <span></span>
+          <br>
         </div>
 
       </div>
       <!--    ===============    Doctor Profile ==================================-->
-      <div class="doctorProfile_div">
+      <div  class="doctorProfile_div">
         <hr class="horizontal-line">
         <div class="DoctorName_div">
           <label> DOCTOR NAME</label>
@@ -139,48 +142,32 @@
         <label class="Languages-Spoken"> LANGUAGE SPOKEN</label>
 
         <div>
-          <!--          <mat-card>-->
-          <!--            <mat-card-content>-->
-          <!--              <h2 class="example-h2">Angular Material Checkbox Example</h2>-->
-          <!--              <form [formGroup]="form">-->
-          <!--                <section class="example-section" *ngFor="let cartoon of cartoonsData">-->
-          <!--                  <mat-checkbox class="example-margin"-->
-          <!--                                (change)="onChangeEventFunc(cartoon.name, $event)"-->
-          <!--                                [formControl]="cartoonControl">-->
-          <!--                    {{ cartoon.name }}-->
-          <!--                  </mat-checkbox>-->
-          <!--                </section>-->
-          <!--                <button mat-raised-button color="accent" style="margin-top:10px;">Submit</button>-->
-          <!--              </form>-->
-          <!--            </mat-card-content>-->
-          <!--          </mat-card>-->
-
 
           <!--          ============column 1========-->
 
           <div class="Languages-Spoken_coln">
             <input type="checkbox" id="arabic">
-            <label>Arabic </label>
+            <label class="Languages-Spoken_css"> Arabic </label>
             <br>
             <input type="checkbox" id="spanish">
-            <label>Spanish</label>
+            <label class="Languages-Spoken_css">Spanish</label>
             <br>
             <input type="checkbox" id="german">
-            <label>German</label>
+            <label class="Languages-Spoken_css">German</label>
           </div>
 
 
           <!--          ============column 2========-->
           <div class="Languages-Spoken_coln">
             <input type="checkbox" id="romanian">
-            <label>Romanian </label>
+            <label class="Languages-Spoken_css"> Romanian </label>
             <br>
             <input type="checkbox" id="french">
 
-            <label>French</label>
+            <label class="Languages-Spoken_css">French</label>
             <br>
             <input type="checkbox" id="hindi">
-            <label>Hindi</label>
+            <label class="Languages-Spoken_css"> Hindi</label>
 
           </div>
 
@@ -188,41 +175,41 @@
           <!--          ============column 3========-->
           <div class="Languages-Spoken_coln">
             <input type="checkbox" id="italian">
-            <label>Italian</label>
+            <label class="Languages-Spoken_css"> Italian</label>
             <br>
             <input type="checkbox" id="russian">
 
-            <label>Russian</label>
+            <label class="Languages-Spoken_css">Russian</label>
             <br>
             <input type="checkbox" id="korean">
-            <label>Korean</label>
+            <label class="Languages-Spoken_css">Korean</label>
 
           </div>
 
           <!--          ============column 4========-->
           <div class="Languages-Spoken_coln">
             <input type="checkbox" id="portuguese">
-            <label>Portuguese</label>
+            <label class="Languages-Spoken_css">Portuguese</label>
             <br>
             <input type="checkbox" id="chinese">
-            <label> Chinese</label>
+            <label class="Languages-Spoken_css"> Chinese</label>
             <br>
             <input type="checkbox" id="egyptian">
-            <label>Egyptian</label>
+            <label class="Languages-Spoken_css">Egyptian</label>
 
           </div>
 
           <!--          ============column 5========-->
           <div class="Languages-Spoken_coln">
             <input type="checkbox" id="farsi">
-            <label>Farsi</label>
+            <label  class="Languages-Spoken_css">Farsi</label>
             <br>
 
             <input type="checkbox" id="polish">
-            <label> Polish</label>
+            <label class="Languages-Spoken_css"> Polish</label>
             <br>
             <input type="checkbox" id="greek">
-            <label>Greek</label>
+            <label class="Languages-Spoken_css">Greek</label>
 
           </div>
 
@@ -238,32 +225,19 @@
     </div>
 
 
-    <!--=================Slider button=======================-->
-    <!--    <mat-card class="example-result-card">-->
-    <!--        <mat-slider class="example-margin"-->
-    <!--          [thumbLabel]= this.thumbLabel-->
-    <!--          [tickInterval]="getSliderTickInterval()"-->
-    <!--          [(ngModel)]=this.value-->
-    <!--        >-->
-    <!--        </mat-slider>-->
-    <!--    </mat-card>-->
-
-
-    <!--    <mat-slider-->
-    <!--      thumbLabel-->
-    <!--      [(ngModel)]="formatLabel"-->
-    <!--      tickInterval="50"-->
-    <!--      min="1"-->
-    <!--      max="50"></mat-slider>-->
-
-
   </div>
 
+  <!--===================footter Images=============================-->
 
-  <!--      ///////////////////////////////////-->
+  <div class="Body2">
+    <label class="Lorem-Ipsum-dolor-se"> Lorem-Ipsum-dolor-se</label>
+<p class="BodyText2">
+  Lorem Ipsum dolor set lorem Ipsum dolor set
+  <br>  lorem Ipsum dolor set lorem Ipsum dolor set
+</p>
+<!--    <br>-->
+  </div>
 
-  <!--    </div>-->
-  <!--===================fotter Images=============================-->
   <div class="footer">
     <div style="display:inline-block">
       <img class="footer_Rectangle" src="../../../assets/icons/bitmap.png"/>
