--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -201,9 +201,19 @@
 
           <!--          ============column 5========-->
           <div class="Languages-Spoken_coln">
-            <input type="checkbox" id="farsi">
-            <label  class="Languages-Spoken_css">Farsi</label>
-            <br>
+
+<!--            =====================-->
+
+            <label class="containerLabel" for="cbxGerman">German
+              <input type="checkbox" id="cbxGerman">
+              <span class="checkmark"></span>
+            </label>
+<!--            =========================-->
+
+
+<!--            <input class="checkmark" type="checkbox" id="farsi">-->
+<!--            <label  class="Languages-Spoken_css">Farsi</label>-->
+<!--            <br>-->
 
             <input type="checkbox" id="polish">
             <label class="Languages-Spoken_css"> Polish</label>
@@ -242,31 +252,31 @@
     <div style="display:inline-block">
       <img class="footer_Rectangle" src="../../../assets/icons/bitmap.png"/>
       <br>
-      <span> Amly Lee</span>
+<!--      <span> Amly Lee</span>-->
     </div>
 
     <div style="display:inline-block">
       <img class="footer_Rectangle" src="../../../assets/icons/bitmap2.png"/>
       <br>
-      <span> Amly Lee</span>
+<!--      <span> Amly Lee</span>-->
     </div>
 
     <div style="display:inline-block">
       <img class="footer_Rectangle" src="../../../assets/icons/bitmap4.png"/>
       <br>
-      <span> Amly Lee</span>
+<!--      <span> Amly Lee</span>-->
     </div>
 
     <div style="display:inline-block">
       <img class="footer_Rectangle" src="../../../assets/icons/bitmap3.png" height="120" width="180"/>
       <br>
-      <span> Amly Lee</span>
+<!--      <span> Amly Lee</span>-->
     </div>
 
     <div style="display:inline-block">
       <img class="footer_Rectangle" src="../../../assets/icons/bitmap.png"/>
       <br>
-      <p class="Amy-Lee"> Amly Lee</p>
+<!--      <p class="Amy-Lee"> Amly Lee</p>-->
     </div>
 
   </div>
