Home page language checkbox fixed

--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -146,20 +146,51 @@
           <!--          ============column 1========-->
 
           <div class="Languages-Spoken_coln">
-            <input type="checkbox" id="arabic">
+
+            <label class="containerLabel" for="arabic">Arabic
+              <input type="checkbox" id="arabic">
+              <span class="checkmark"></span>
+            </label>
+
+            <label class="containerLabel" for="spanish">Spanish
+              <input type="checkbox" id="spanish">
+              <span class="checkmark"></span>
+            </label>
+
+            <label class="containerLabel" for="german">German
+              <input type="checkbox" id="german">
+              <span class="checkmark"></span>
+            </label>
+
+            <!--<input type="checkbox" id="arabic">
             <label class="Languages-Spoken_css"> Arabic </label>
             <br>
             <input type="checkbox" id="spanish">
             <label class="Languages-Spoken_css">Spanish</label>
             <br>
             <input type="checkbox" id="german">
-            <label class="Languages-Spoken_css">German</label>
+            <label class="Languages-Spoken_css">German</label>-->
           </div>
 
 
           <!--          ============column 2========-->
           <div class="Languages-Spoken_coln">
-            <input type="checkbox" id="romanian">
+            <label class="containerLabel" for="cbxRomanian">Romanian
+              <input type="checkbox" id="cbxRomanian">
+              <span class="checkmark"></span>
+            </label>
+
+            <label class="containerLabel" for="cbxFrench">French
+              <input type="checkbox" id="cbxFrench">
+              <span class="checkmark"></span>
+            </label>
+
+            <label class="containerLabel" for="cbxHindi">Hindi
+              <input type="checkbox" id="cbxHindi">
+              <span class="checkmark"></span>
+            </label>
+
+            <!--<input type="checkbox" id="romanian">
             <label class="Languages-Spoken_css"> Romanian </label>
             <br>
             <input type="checkbox" id="french">
@@ -167,14 +198,29 @@
             <label class="Languages-Spoken_css">French</label>
             <br>
             <input type="checkbox" id="hindi">
-            <label class="Languages-Spoken_css"> Hindi</label>
+            <label class="Languages-Spoken_css"> Hindi</label>-->
 
           </div>
 
 
           <!--          ============column 3========-->
           <div class="Languages-Spoken_coln">
-            <input type="checkbox" id="italian">
+            <label class="containerLabel" for="cbxItalian">Italian
+              <input type="checkbox" id="cbxItalian">
+              <span class="checkmark"></span>
+            </label>
+
+            <label class="containerLabel" for="cbxRussian">Russian
+              <input type="checkbox" id="cbxRussian">
+              <span class="checkmark"></span>
+            </label>
+
+            <label class="containerLabel" for="cbxKorean">Korean
+              <input type="checkbox" id="cbxKorean">
+              <span class="checkmark"></span>
+            </label>
+
+            <!--<input type="checkbox" id="italian">
             <label class="Languages-Spoken_css"> Italian</label>
             <br>
             <input type="checkbox" id="russian">
@@ -182,26 +228,56 @@
             <label class="Languages-Spoken_css">Russian</label>
             <br>
             <input type="checkbox" id="korean">
-            <label class="Languages-Spoken_css">Korean</label>
+            <label class="Languages-Spoken_css">Korean</label>-->
 
           </div>
 
           <!--          ============column 4========-->
           <div class="Languages-Spoken_coln">
-            <input type="checkbox" id="portuguese">
+            <label class="containerLabel" for="cbxPortugese">Portugese
+              <input type="checkbox" id="cbxPortugese">
+              <span class="checkmark"></span>
+            </label>
+
+            <label class="containerLabel" for="cbxChinese">Chinese
+              <input type="checkbox" id="cbxChinese">
+              <span class="checkmark"></span>
+            </label>
+
+            <label class="containerLabel" for="cbxEgyptian">Egyptian
+              <input type="checkbox" id="cbxEgyptian">
+              <span class="checkmark"></span>
+            </label>
+
+            <!--<input type="checkbox" id="portuguese">
             <label class="Languages-Spoken_css">Portuguese</label>
             <br>
             <input type="checkbox" id="chinese">
             <label class="Languages-Spoken_css"> Chinese</label>
             <br>
             <input type="checkbox" id="egyptian">
-            <label class="Languages-Spoken_css">Egyptian</label>
+            <label class="Languages-Spoken_css">Egyptian</label>-->
 
           </div>
 
           <!--          ============column 5========-->
           <div class="Languages-Spoken_coln">
-            <input type="checkbox" id="farsi">
+            <label class="containerLabel" for="cbxFarsi">Farsi
+              <input type="checkbox" id="cbxFarsi">
+              <span class="checkmark"></span>
+            </label>
+
+            <label class="containerLabel" for="cbxPolish">Polish
+              <input type="checkbox" id="cbxPolish">
+              <span class="checkmark"></span>
+            </label>
+
+            <label class="containerLabel" for="cbxGreek">Greek
+              <input type="checkbox" id="cbxGreek">
+              <span class="checkmark"></span>
+            </label>
+
+            <!--<input type="checkbox" id="farsi">
             <label  class="Languages-Spoken_css">Farsi</label>
             <br>
 
@@ -209,7 +285,7 @@
             <label class="Languages-Spoken_css"> Polish</label>
             <br>
             <input type="checkbox" id="greek">
-            <label class="Languages-Spoken_css">Greek</label>
+            <label class="Languages-Spoken_css">Greek</label>-->
 
           </div>
 
