--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -66,7 +66,7 @@
           <div style="display:inline-block">
             <input  type="checkbox" #inputE2 id="oralSurgeon" [(ngModel)]="oralSureon"
                     (change)="isOralSurgeon(inputE2.checked)">
-            <label  class="Oral-Surgeon"> Surgeon </label>
+            <label  class="Oral-Surgeon"> Oral Surgeon </label>
             <br>
             <input type="checkbox" id="endodontist" #inputElement3 [(ngModel)]="endodontist"
                    (change)="isEndodontist(inputElement3.checked)">
