--- a/src/app/modules/results/results-main/results-main.component.html
+++ b/src/app/modules/results/results-main/results-main.component.html
@@ -158,7 +158,9 @@
 
 
   <section class="col-lg-6" id="resultsContainer">
-    <app-result-item></app-result-item>
+    <app-result-item *ngFor=""></app-result-item>
+
+
     <app-result-item></app-result-item>
     <app-result-item></app-result-item>
     <app-result-item></app-result-item>
