--- a/src/app/modules/home-page/home-page.component.css
+++ b/src/app/modules/home-page/home-page.component.css
@@ -15,6 +15,8 @@
   /*margin-top: 12px;*/
   /*margin-left: 15px;*/
   border: 0px;
+  margin-top:0px
+;
 
 }
 
@@ -175,7 +177,7 @@
 
 
 .AccessebilityTimeframe {
-  width: 183px;
+  width: 220px;
   display: inline-block;
   margin-left: 15px;
 }
