--- a/src/app/modules/home-page/home-page.component.css
+++ b/src/app/modules/home-page/home-page.component.css
@@ -2,7 +2,7 @@
 .DENTAL-PLAN {
   width: 113px;
   height: 20px;
-  font-family: SourceSansPro;
+  font-family: SourceSansPro-Regular;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -23,7 +23,7 @@
 .AdvancedSEARCH_div {
   width: 94px;
   height: 48px;
-  font-family: SourceSansPro;
+  font-family: SourceSansPro-Regular;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -65,7 +65,7 @@
 .YOUR-location {
   width: 230px;
   height: 24px;
-  font-family: SourceSansPro;
+  font-family: SourceSansPro-Regular;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -81,7 +81,7 @@
 .Advanced-search {
   width: 150px;
   height: 18px;
-  font-family: SourceSansPro;
+  font-family: SourceSansPro-Regular;
   font-size: 14px;
   font-weight: 600;
   font-stretch: normal;
@@ -185,30 +185,21 @@
 .Extended-Hours {
   width: 183px;
   height: 24px;
-
-  font-family: SourceSansPro;
-
+  font-family: SourceSansPro-Regular;
   font-size: 14px;
-
   font-weight: normal;
-
   font-stretch: normal;
-
   font-style: normal;
-
   line-height: 1.71;
-
   letter-spacing: 1.17px;
-
   color: #0058c3;
-
 }
 
 
 .Saturday {
   width: 128px;
   height: 18px;
-  font-family: SourceSansPro;
+  font-family: SourceSansPro-Regular;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -221,7 +212,7 @@
 .Weekday {
   width: 128px;
   height: 18px;
-  font-family: SourceSansPro;
+  font-family: SourceSansPro-Regular;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -244,7 +235,7 @@
 .accessibility {
   width: 153px;
   height: 24px;
-  font-family: SourceSansPro;
+  font-family: SourceSansPro-Bold;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -279,7 +270,7 @@
 .SECOND-NAME {
   width: 130px;
   height: 24px;
-  font-family: SourceSansPro;
+  font-family: SourceSansPro-Regular;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -293,7 +284,7 @@
 .FIRST-NAME {
   width: 125px;
   height: 24px;
-  font-family: SourceSansPro;
+  font-family: SourceSansPro-Regular;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -307,7 +298,7 @@
 .GENDER {
   width: 148px;
   height: 24px;
-  font-family: SourceSansPro;
+  font-family: SourceSansPro-Regular;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -321,7 +312,7 @@
 .MALE {
   width: 55px;
   height: 24px;
-  font-family: SourceSansPro;
+  font-family: SourceSansPro-Regular;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -335,7 +326,7 @@
 .FEMALE {
   width: 75px;
   height: 24px;
-  font-family: SourceSansPro;
+  font-family: SourceSansPro-Regular;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -477,7 +468,7 @@
 .Lorem-Ipsum-dolor-se {
   width: 320px;
   height: 33px;
-  font-family: SourceSansPro;
+  font-family: SourceSansPro-Bold;
   font-size: 26px;
   font-weight: bold;
   font-stretch: normal;
@@ -489,7 +480,7 @@
 }
 
 .BodyText2 {
-  font-family: SourceSansPro;
+  font-family: SourceSansPro-Regular;
   font-size: 18px;
   font-weight: normal;
   font-stretch: normal;
